# OOP_Game

./: README.md
lab1/: CMakeLists.txt
lab1/settings/: tilemap.txt
lab1/source/: main.cpp
lab1/source/App/: app.cpp  app.h
lab1/source/Entity/: entity.h
lab1/source/Field/: field.cpp  field.h
lab1/source/FieldBuilder/: field_builder.cpp  field_builder.h
lab1/source/Tile/: tile.cpp  tile.h
lab1/source/View/: view.cpp  view.h
